--- a/estilos.css
+++ b/estilos.css
@@ -8,8 +8,8 @@
 }
 
 .header-home {
-  background-image: url("../img/imagenprincipal.jpg");
-  height: 500px;
+  background-image: url("img/imagenprincipal.jpg");
+  height: 500px;-
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -246,7 +246,7 @@ ul ul ul li:hover ul {
 }
 
 .calcula-imc {
-  background-image: url("../img/fondoimc.jpg");
+  background-image: url("img/fondoimc.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
